Alerta de Hola!

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 
 <body>
     <button id="boton">Saludar</button>
+    <script> 
+    const boton = document.getElementById("boton");
+    boton.addEventListener("click", function(){
+        alert("Hola!");
+    });
+    </script>
 </body>
 </html>
